--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   ],
   "author": "RamiroGG <rgg7888@outlook.com>",
   "license": "MIT",
-  "preferGlobal": true
+  "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rgg7888/rMsg.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rgg7888/rMsg/issues"
+  },
+  "homepage": "https://github.com/rgg7888/rMsg#readme"
 }
